--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ h4{
 }
 .card{
     background: url("/uber/Rider_Home_bg_desktop2x.png");
-    background-repeat: round;
-    background-size: 1200px;
+    background-repeat: none;
+    background-size: 100%;
     height: 600px;
     
 }
